--- a/charts/trento-server/charts/trento-mcp-server/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
             - configMapRef:
                 name: {{ include "trento-mcp-server.fullname" . }}
           ports:
-            - containerPort: {{ include "trento-mcp-server.port" . }}
+            - containerPort: {{ include "trentoMcpServer.port" . }}
               name: http
               protocol: TCP
           {{- if .Values.mcpServer.enableHealthCheck }}
