--- a/charts/trento-server/charts/trento-mcp-server/templates/networkpolicy.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/networkpolicy.yaml
@@ -33,7 +33,7 @@ spec:
     {{- end }}
   ingress:
     - ports:
-        - port: {{ include "trento-mcp-server.port" . }}
+        - port: {{ include "trentoMcpServer.port" . }}
         {{- if .Values.mcpServer.enableHealthCheck }}
         # The health check port does not need to be reachable outside. It is used for health/ready probes.
         # - port: {{ .Values.containerPorts.health }}
