--- a/charts/trento-server/charts/trento-mcp-server/templates/ingress.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/ingress.yaml
@@ -4,7 +4,7 @@ SPDX-License-Identifier: Apache-2.0
 */}}
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "trento-mcp-server.fullname" . -}}
-{{- $svcPort := include "trento-mcp-server.port" . }}
+{{- $svcPort := include "trentoMcpServer.port" . -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
