Add new params to mcp chart
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/charts/trento-mcp-server/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/configmap.yaml
@@ -7,7 +7,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "trento-mcp-server.fullname" . }}
   labels:
-    {{- include "trento-mcp-server.labels" . | nindent 4 }}
+   {{- include "trento-mcp-server.labels" . | nindent 4 }}
 data:
   {{- $webService := printf "%s-%s.%s.svc.%s" .Release.Name .Values.global.trentoWeb.name .Release.Namespace .Values.clusterDomain }}
   {{- $wandaService := printf "%s-%s.%s.svc.%s" .Release.Name .Values.global.trentoWanda.name .Release.Namespace .Values.clusterDomain }}
@@ -16,17 +16,22 @@ data:
   {{- if .Values.mcpServer.oasPath }}
   ## List of comma-separated paths to the OpenAPI specification files (local or remote URLs).
   TRENTO_MCP_OAS_PATH: {{ if kindIs "slice" .Values.mcpServer.oasPath }}{{ join "," .Values.mcpServer.oasPath | quote }}{{ else }}{{ .Values.mcpServer.oasPath | quote }}{{ end }}
+  {{- else if .Values.mcpServer.trentoURL }}
+  ## TRENTO_MCP_OAS_PATH is empty when trentoURL is specified.
+  TRENTO_MCP_OAS_PATH: ""
   {{- else }}
-  ## List of comma-separated paths to the OpenAPI specification files for TrentoWeb and Wanda services.
+  ## List of comma-separated paths to the OpenAPI specification files for TrentoWeb and Wanda internal services.
   TRENTO_MCP_OAS_PATH: {{ printf "http://%s:%d/api/all/openapi,http://%s:%d/api/all/openapi" $webService $webPort $wandaService $wandaPort | quote }}
   {{- end }}
 
-  {{- if .Values.mcpServer.trentoURL }}
-  ## Target Trento server to connect to for API operations and data retrieval.
+  ## Target Trento server to connect to. If none is specified, it will use the base path from the OAS files.
   TRENTO_MCP_TRENTO_URL: {{ .Values.mcpServer.trentoURL | quote }}
+
+  ## Custom paths for API autodiscovery, useful when only passing a Trento URL.
+  {{- if .Values.mcpServer.autodiscoveryPaths }}
+  TRENTO_MCP_AUTODISCOVERY_PATHS: {{ if kindIs "slice" .Values.mcpServer.autodiscoveryPaths }}{{ join "," .Values.mcpServer.autodiscoveryPaths | quote }}{{ else }}{{ .Values.mcpServer.autodiscoveryPaths | quote }}{{ end }}
   {{- else }}
-  ## Default Trento server to connect to for API operations and data retrieval.
-  TRENTO_MCP_TRENTO_URL: {{ printf "http://%s:%d" $webService $webPort | quote }}
+  TRENTO_MCP_AUTODISCOVERY_PATHS: ""
   {{- end }}
 
   ## The port on which the MCP Server listens for incoming connections.
@@ -38,14 +43,17 @@ data:
   ## The port on which the health check server listens for incoming connections.
   TRENTO_MCP_HEALTH_PORT: {{ .Values.containerPorts.health | quote }}
 
+  ## The API path used for health checks on target servers, like Trento Web or Wanda.
+  TRENTO_MCP_HEALTH_API_PATH: {{ .Values.mcpServer.healthApiPath | quote }}
+
   ## The transport protocol to use for MCP communication. Options: 'streamable' (default) or 'sse'.
   TRENTO_MCP_TRANSPORT: {{ .Values.mcpServer.transport | quote }}
 
   ## The HTTP header name used to pass the Trento API key for authentication with the Trento server.
   TRENTO_MCP_HEADER_NAME: {{ .Values.mcpServer.headerName | quote }}
 
-  {{- if .Values.mcpServer.tagFilter }}
   ## List of OpenAPI tags to filter which operations are exposed as MCP tools. Only operations with at least one matching tag will be available.
+  {{- if .Values.mcpServer.tagFilter }}
   TRENTO_MCP_TAG_FILTER: {{ if kindIs "slice" .Values.mcpServer.tagFilter }}{{ join "," .Values.mcpServer.tagFilter | quote }}{{ else }}{{ .Values.mcpServer.tagFilter | quote }}{{ end }}
   {{- end }}
 
