--- a/charts/trento-server/charts/trento-wanda/templates/ingress.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/ingress.yaml
@@ -21,6 +21,8 @@ metadata:
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
+    # This middleware strips the /wanda prefix from the request path
+    traefik.ingress.kubernetes.io/router.middlewares: {{ $.Release.Namespace }}-{{ include "trento-wanda.fullname" $ }}-strip-prefix@kubernetescrd
   {{- end }}
 spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
