--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -84,21 +84,7 @@ ingress:
   hosts:
     - host: ""
       paths:
-        - path: /api/checks
-          pathType: ImplementationSpecific
-        - path: /api/v1/checks
-          pathType: ImplementationSpecific
-        - path: /api/v2/checks
-          pathType: ImplementationSpecific
-        - path: /api/v3/checks
-          pathType: ImplementationSpecific
-        - path: /api/groups
-          pathType: ImplementationSpecific
-        - path: /api/v1/groups
-          pathType: ImplementationSpecific
-        - path: /api/operations
-          pathType: ImplementationSpecific
-        - path: /api/v1/operations
+        - path: /wanda
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
