--- a/charts/trento-server/charts/trento-wanda/templates/middleware.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/middleware.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.enabled -}}
+{{ if and .Values.ingress.enabled (eq .Values.ingress.className "traefik") }}
 {{- $fullName := include "trento-wanda.fullname" . -}}
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
