--- a/charts/trento-server/charts/trento-mcp-server/values.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/values.yaml
@@ -71,8 +71,8 @@ service:
 ## @param ingress.hosts [array] Ingress host rules
 ## @param ingress.tls [array] Ingress TLS configuration
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "traefik"
   annotations:
     kubernetes.io/tls-acme: "true"
   hosts:
