--- a/charts/trento-server/charts/trento-mcp-server/templates/middleware.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/middleware.yaml
@@ -14,6 +14,10 @@ spec:
   # so the backend service receives a clean path.
   stripPrefix:
     prefixes: {{- range .Values.ingress.hosts }}
-      - {{ (first .paths).path }}
+      {{- $p := (first .paths).path }}
+      - {{ $p }}
+      {{- if not (regexMatch "/$" $p) }}
+      - {{ printf "%s/" $p }}
+      {{- end }}
     {{- end }}
 {{- end }}
