Add default host in ingress
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/charts/trento-mcp-server/values.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/values.yaml
@@ -78,7 +78,7 @@ ingress:
   hosts:
     - host: ""
       paths:
-        - path: /
+        - path: /mcp-server-trento
           pathType: ImplementationSpecific
   tls:
     []
