Replace default header
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/charts/trento-mcp-server/values.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/values.yaml
@@ -39,7 +39,7 @@ mcpServer:
     - /api/all/openapi
     - /wanda/api/all/openapi
   enableHealthCheck: true
-  headerName: X-TRENTO-MCP-APIKEY
+  headerName: Authorization
   healthApiPath: /api/healthz
   insecureTLS: false
   oasPath: []
