Use bitnamilegacy img repository
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -79,3 +79,5 @@ rabbitmq:
       existingSecret: rabbitmq-tls-server
       existingSecretFullChain: false
   extraEnvVarsCM: "{{ .Release.Name }}-rabbitmq-configmap"
+  image:
+    repository: bitnamilegacy/rabbitmq
