--- a/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
@@ -35,11 +35,6 @@ spec:
           volumeMounts:
             - name: checks
               mountPath: /usr/share/trento/checks
-          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
-            - name: rabbitmq-mtls-certs
-              mountPath: /var/rabbitmq/ssl
-              readOnly: true
-          {{- end }}
         - name: create-wanda-db
           image: "{{ .Values.postgresql.image.registry }}/{{ .Values.postgresql.image.repository }}:{{ .Values.postgresql.image.tag }}"
           command:
@@ -107,30 +102,19 @@ spec:
             - name: checks
               mountPath: /usr/share/trento/checks
               readOnly: true
-          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
-            - name: rabbitmq-mtls-certs
-              mountPath: /var/rabbitmq/ssl
+            {{- if .Values.global.rabbitmq.tls.mtls.enabled }}
+            - name: wanda-client-cert
+              mountPath: /etc/certs/rabbitmq
               readOnly: true
-            - name: rabbitmq-mtls-certs-ca
-              mountPath: /usr/local/share/ca-certificates/ca.crt
-              subPath: ca.crt
-              readOnly: true
-          {{- end }}
-          lifecycle:
-            postStart:
-              exec:
-                command: ["/bin/sh", "-c", "update-ca-certificates"]
+            {{- end }}
       volumes:
         - name: checks
           emptyDir: {}
-      {{- if .Values.global.rabbitmq.auth.tls.enabled }}
-        - name: rabbitmq-mtls-certs
+        {{- if .Values.global.rabbitmq.tls.mtls.enabled }}
+        - name: wanda-client-cert
           secret:
-            secretName: rabbitmq-tls-client-wanda
-        - name: rabbitmq-mtls-certs-ca
-          secret:
-            secretName: rabbitmq-tls-client-wanda
-      {{- end }}
+            secretName: {{ include "trento-wanda.fullname" . }}-client-cert
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
