--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -84,9 +84,7 @@ jobs:
         with:
           version: v3.7.2
       - name: Add dependency chart repos
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+        run: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         env:
